--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": "22.x",
+    "node": ">=v18.0.0 <19.0.0",
     "npm": ">=6.0.0"
   },
   "scripts": {
